# skystore_templates_wh_20_2

./: db.sqlite3  manage.py  pyproject.toml
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: contacts.html  home.html
skystore_templates_wh_20_2/: asgi.py  settings.py  urls.py  wsgi.py
