[tool.poetry]
name = "skystore-templates-wh-20-2"
version = "0.1.0"
description = ""
authors = ["glebk <glebkot57@gmail.com>"]
readme = "README.md"
packages = [{include = "skystore_templates_wh_20_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
